--- a/docker-compose.aliyun.yml
+++ b/docker-compose.aliyun.yml
@@ -231,7 +231,8 @@ services:
     volumes:
       - nginx_proxy_logs:/var/log/nginx
       - ssl_certs:/etc/nginx/ssl
-      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      # 只挂载开发环境配置文件，避免SSL证书配置冲突
+      - ./nginx/conf.d/ssl-manager-dev.conf:/etc/nginx/conf.d/ssl-manager-dev.conf:ro
     ports:
       - "80:80"
       - "443:443"
