--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
 # SSL证书管理系统 - Docker Compose配置
 
-# 网络配置
-networks:
-  ssl-manager-network:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 172.20.0.0/16
+# 网络配置 - 使用默认网络避免冲突
+#     driver: bridge
+#     ipam:
+#       config:
+#         - subnet: 10.10.10.0/24
 
 # 数据卷配置
 volumes:
@@ -41,9 +39,6 @@ services:
       - ./database/init:/docker-entrypoint-initdb.d
     ports:
       - "${DB_PORT:-5432}:5432"
-    networks:
-      ssl-manager-network:
-        ipv4_address: 172.20.0.10
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-ssl_user} -d ${DB_NAME:-ssl_manager}"]
       interval: 10s
@@ -65,9 +60,6 @@ services:
       - redis_data:/data
     ports:
       - "${REDIS_PORT:-6379}:6379"
-    networks:
-      ssl-manager-network:
-        ipv4_address: 172.20.0.11
     healthcheck:
       test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
       interval: 10s
@@ -94,14 +86,14 @@ services:
       
       # 数据库配置
       DB_HOST: postgres
-      DB_PORT: 5432
+      DB_PORT: "5432"
       DB_NAME: ${DB_NAME:-ssl_manager}
       DB_USER: ${DB_USER:-ssl_user}
       DB_PASSWORD: ${DB_PASSWORD:-ssl_password}
-      
+
       # Redis配置
       REDIS_HOST: redis
-      REDIS_PORT: 6379
+      REDIS_PORT: "6379"
       REDIS_PASSWORD: ${REDIS_PASSWORD:-redis_password}
       
       # 安全配置
@@ -121,10 +113,7 @@ services:
       - ./backend/config:/app/config:ro
     ports:
       - "${BACKEND_PORT:-8000}:8000"
-      - "${METRICS_PORT:-9090}:9090"
-    networks:
-      ssl-manager-network:
-        ipv4_address: 172.20.0.20
+      # - "${METRICS_PORT:-9090}:9090"  # 避免与Prometheus冲突
     depends_on:
       postgres:
         condition: service_healthy
@@ -155,11 +144,8 @@ services:
     restart: unless-stopped
     volumes:
       - nginx_logs:/var/log/nginx
-    ports:
-      - "${FRONTEND_PORT:-80}:80"
-    networks:
-      ssl-manager-network:
-        ipv4_address: 172.20.0.30
+    # ports:
+    #   - "${FRONTEND_PORT:-80}:80"
     depends_on:
       - backend
     healthcheck:
@@ -188,9 +174,6 @@ services:
     ports:
       - "${HTTP_PORT:-80}:80"
       - "${HTTPS_PORT:-443}:443"
-    networks:
-      ssl-manager-network:
-        ipv4_address: 172.20.0.40
     depends_on:
       - frontend
       - backend
@@ -224,9 +207,6 @@ services:
       - prometheus_data:/prometheus
     ports:
       - "${PROMETHEUS_PORT:-9090}:9090"
-    networks:
-      ssl-manager-network:
-        ipv4_address: 172.20.0.50
     profiles:
       - monitoring
 
@@ -245,9 +225,6 @@ services:
       - ./monitoring/grafana/datasources:/etc/grafana/provisioning/datasources:ro
     ports:
       - "${GRAFANA_PORT:-3000}:3000"
-    networks:
-      ssl-manager-network:
-        ipv4_address: 172.20.0.51
     depends_on:
       - prometheus
     profiles:
@@ -264,9 +241,6 @@ services:
       - nginx_logs:/var/log/nginx:ro
     ports:
       - "${FLUENTD_PORT:-24224}:24224"
-    networks:
-      ssl-manager-network:
-        ipv4_address: 172.20.0.60
     profiles:
       - logging
 
