--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,8 @@
 # 生产环境Nginx主配置文件
-user nginx;
+# user指令在非root用户运行时会被忽略
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
+pid /tmp/nginx.pid;
 
 # 优化worker配置
 worker_rlimit_nofile 65535;
@@ -143,6 +143,12 @@ http {
         keepalive 16;
     }
 
+    upstream prometheus_servers {
+        least_conn;
+        server ssl-manager-prometheus:9090 max_fails=3 fail_timeout=30s;
+        keepalive 16;
+    }
+
     # 缓存配置
     proxy_cache_path /var/cache/nginx/proxy levels=1:2 keys_zone=api_cache:10m max_size=1g inactive=60m use_temp_path=off;
     proxy_cache_path /var/cache/nginx/static levels=1:2 keys_zone=static_cache:10m max_size=1g inactive=1d use_temp_path=off;
@@ -157,14 +163,14 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     # 默认服务器（捕获未匹配的请求）
-    server {
-        listen 80 default_server;
-        listen 443 ssl default_server;
-        server_name _;
-        
-        ssl_certificate /etc/nginx/ssl/default.crt;
-        ssl_certificate_key /etc/nginx/ssl/default.key;
-        
-        return 444;  # 关闭连接
-    }
+    # server {
+    #     listen 80;
+    #     listen 443 ssl;
+    #     server_name _;
+
+    #     ssl_certificate /etc/nginx/ssl/default.crt;
+    #     ssl_certificate_key /etc/nginx/ssl/default.key;
+
+    #     return 444;  # 关闭连接
+    # }
 }
