--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -212,6 +212,7 @@ services:
 
   # 添加额外的监控组件
   node-exporter:
+    # 使用官方镜像，稳定可靠
     image: prom/node-exporter:latest
     container_name: ssl-manager-node-exporter
     restart: unless-stopped
@@ -233,7 +234,8 @@ services:
           # cpus: '0.25'
 
   cadvisor:
-    image: gcr.io/cadvisor/cadvisor:latest
+    # 使用Docker Hub官方镜像替代gcr.io，解决网络访问问题
+    image: google/cadvisor:latest
     container_name: ssl-manager-cadvisor
     restart: unless-stopped
     privileged: true
@@ -245,6 +247,10 @@ services:
       - /sys:/sys:ro
       - /var/lib/docker:/var/lib/docker:ro
       - /cgroup:/cgroup:ro
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    command:
+      - '--housekeeping_interval=10s'
+      - '--docker_only=true'
     ports:
       - "8080:8080"
     # deploy:
