docs: 全面更新部署文档和脚本，基于生产环境部署经验
📚 文档和脚本全面更新 - 基于实际生产环境部署验证

主要更新:
✅ DEPLOYMENT.md 全面重写:
   - 基于Ubuntu 22.04.5 LTS + Docker 26.1.3的验证配置
   - 完整的cgroup v2支持配置指南
   - 阿里云ECS部署具体配置建议
   - 详细的环境变量配置说明(端口号字符串格式等)
   - 完整的生产环境验证清单

✅ 新增 QUICKSTART.md:
   - 5分钟快速部署指南
   - 一键部署命令和验证步骤
   - 常用管理命令和故障排除
   - 服务访问地址完整列表

✅ 新增 scripts/deploy-production.sh:
   - 生产环境一键部署脚本
   - 自动系统要求检查(内存、磁盘、cgroup v2)
   - Docker 26.1.3+自动安装和配置
   - 数据目录自动创建和权限设置
   - 环境变量自动生成和配置
   - 完整的部署验证流程

✅ README.md 优化:
   - 添加文档导航(快速开始→详细部署)
   - 更新系统要求为生产环境验证配置
   - 更新服务访问地址和管理命令
   - 基于实际部署经验的配置说明

技术改进:
🔧 配置标准化: 环境变量格式、镜像版本、数据权限
🔧 自动化部署: 一键脚本包含完整的检查和验证
🔧 故障排除: 基于实际问题的解决方案
🔧 用户体验: 分层文档结构，从快速开始到详细配置

验证状态:
🎯 所有命令基于生产环境验证
🎯 脚本功能完整测试通过
🎯 文档链接和引用有效
🎯 环境变量配置完整性确认

目标: 为用户提供完整、准确、基于实际验证的部署解决方案

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -234,8 +234,8 @@ services:
           # cpus: '0.25'
 
   cadvisor:
-    # 使用Docker Hub官方镜像替代gcr.io，解决网络访问问题
-    image: google/cadvisor:latest
+    # 使用支持cgroup v2的最新版本
+    image: gcr.io/cadvisor/cadvisor:v0.47.0
     container_name: ssl-manager-cadvisor
     restart: unless-stopped
     privileged: true
@@ -246,11 +246,12 @@ services:
       - /var/run:/var/run:ro
       - /sys:/sys:ro
       - /var/lib/docker:/var/lib/docker:ro
-      - /cgroup:/cgroup:ro
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     command:
       - '--housekeeping_interval=10s'
       - '--docker_only=true'
+      - '--store_container_labels=false'
+      - '--whitelisted_container_labels=io.kubernetes.container.name,io.kubernetes.pod.name,io.kubernetes.pod.namespace'
     ports:
       - "8080:8080"
     # deploy:
