refactor: 移除cAdvisor容器监控服务，简化部署架构
🔧 服务架构优化 - 移除cAdvisor解决cgroup v2兼容性问题

移除范围:
✅ Docker Compose配置:
   - 从docker-compose.prod.yml移除完整cadvisor服务定义
   - 移除端口8080映射和特权模式配置
   - 移除复杂的卷挂载和设备配置
   - 添加移除原因说明注释

✅ 监控配置调整:
   - monitoring/prometheus.yml: 移除cadvisor job配置
   - monitoring/prometheus-simple.yml: 移除cadvisor target
   - 保留Prometheus、Grafana、node-exporter监控功能
   - 添加替代方案说明

✅ 部署脚本更新:
   - 修改cgroup v2检查: 从错误改为警告
   - 更新服务数量验证: 从9个改为8个服务
   - 移除端口8080冲突检查
   - 更新服务访问地址和验证逻辑

✅ 文档同步更新:
   - DEPLOYMENT.md: 更新服务列表、端口配置、故障排除
   - README.md: 修改服务访问表、系统要求说明
   - QUICKSTART.md: 更新监控检查、故障排除指南
   - SCRIPT_USAGE_EXAMPLES.md: 添加替代监控方案

移除原因:
🔧 cgroup v2兼容性问题: 挂载点错误导致启动失败
🔧 资源占用考虑: 特权模式运行，占用较多系统资源
🔧 维护复杂性: 复杂的权限和挂载配置
🔧 替代方案可用: docker stats + node-exporter提供基础监控

替代监控方案:
📊 docker stats --no-stream: 实时容器资源监控
📊 Prometheus + Node Exporter: 系统级监控指标
📊 docker-compose logs: 容器日志监控
📊 docker system df/events: 系统资源和事件监控

验证结果:
✅ 服务架构: 从9服务简化为8服务
✅ 配置正确性: Docker Compose配置语法验证通过
✅ 监控功能: Prometheus + Grafana + Node Exporter正常
✅ 文档一致性: 所有cAdvisor引用已处理
✅ 部署稳定性: 移除cgroup v2兼容性障碍

目标: 简化部署架构，提高部署成功率，保持核心监控功能

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -233,32 +233,9 @@ services:
           # memory: 128M
           # cpus: '0.25'
 
-  cadvisor:
-    # 使用支持cgroup v2的最新版本
-    image: gcr.io/cadvisor/cadvisor:v0.47.0
-    container_name: ssl-manager-cadvisor
-    restart: unless-stopped
-    privileged: true
-    devices:
-      - /dev/kmsg:/dev/kmsg
-    volumes:
-      - /:/rootfs:ro
-      - /var/run:/var/run:ro
-      - /sys:/sys:ro
-      - /var/lib/docker:/var/lib/docker:ro
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    command:
-      - '--housekeeping_interval=10s'
-      - '--docker_only=true'
-      - '--store_container_labels=false'
-      - '--whitelisted_container_labels=io.kubernetes.container.name,io.kubernetes.pod.name,io.kubernetes.pod.namespace'
-    ports:
-      - "8080:8080"
-    # deploy:
-      # resources:
-        # limits:
-          # memory: 256M
-          # cpus: '0.5'
+  # cAdvisor容器监控服务已移除
+  # 原因: cgroup v2兼容性问题和资源占用考虑
+  # 替代方案: 使用node-exporter和docker stats进行基础监控
 
   # 备份服务
   backup:
