refactor: 移除系统监控服务，专注SSL证书管理核心功能
🎯 业务聚焦重构 - 移除Prometheus和Grafana，突出SSL证书管理核心价值

移除范围:
✅ Docker Compose配置:
   - 从docker-compose.yml移除prometheus和grafana服务定义
   - 从docker-compose.prod.yml移除node-exporter系统监控
   - 移除监控数据卷配置(prometheus_data, grafana_data)
   - 移除监控端口映射(9090, 3000, 9100)

✅ 监控配置文件清理:
   - 完整移除monitoring/目录(已备份到backup/)
   - 删除prometheus.yml和相关配置文件
   - 删除grafana配置目录和仪表板文件
   - 清理所有监控相关配置

✅ 部署脚本更新:
   - 更新服务数量验证: 从8个改为5个核心服务
   - 移除监控端口检查(9090, 3000, 9100)
   - 更新数据目录创建: 仅postgres和redis
   - 修改服务访问信息，突出SSL证书管理功能
   - 移除监控相关环境变量配置

✅ 文档同步更新:
   - DEPLOYMENT.md: 移除监控配置，专注SSL证书管理
   - README.md: 更新服务架构，突出核心业务价值
   - QUICKSTART.md: 简化服务管理，专注证书功能
   - SCRIPT_USAGE_EXAMPLES.md: 更新验证命令

业务聚焦原因:
🎯 核心功能专注: SSL证书管理系统应专注证书业务
🎯 架构简化: 移除基础设施监控，降低复杂度
🎯 资源优化: 减少系统资源占用，提高性能
🎯 用户价值: 突出SSL证书管理的专业性

SSL证书管理内置功能:
📋 主机域名监控: 监控证书绑定的域名状态
📋 证书等级检查: DV、OV、EV证书类型识别
📋 加密方式验证: RSA、ECC等加密算法检查
📋 端口监控: 443、80等端口的证书状态
📋 IP类型识别: IPv4/IPv6支持检查
📋 证书状态跟踪: 有效、过期、即将过期状态
📋 有效期管理: 剩余天数计算和到期提醒

最终服务架构(5个核心服务):
🔧 PostgreSQL: 证书数据存储
🔧 Redis: 缓存和会话管理
🔧 Backend: SSL证书管理API
🔧 Frontend: SSL证书管理Web界面
🔧 Nginx: 反向代理和SSL终止

验证结果:
✅ 服务架构: 从8服务优化为5核心服务
✅ 配置正确性: Docker Compose配置验证通过
✅ 业务聚焦: 突出SSL证书管理核心价值
✅ 文档一致性: 所有监控引用已处理
✅ 部署简化: 显著降低部署和维护复杂度

目标: 专注SSL证书管理核心业务，提供专业的证书管理解决方案

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -159,83 +159,15 @@ services:
           # cpus: '0.25'
     profiles: []  # 移除profile限制，在生产环境中启用
 
-  # 生产环境监控服务
-  prometheus:
-    restart: always
-    volumes:
-      - ./monitoring/prometheus-simple.yml:/etc/prometheus/prometheus.yml:ro
-      - prometheus_data:/prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/etc/prometheus/console_libraries'
-      - '--web.console.templates=/etc/prometheus/consoles'
-      - '--storage.tsdb.retention.time=30d'
-      - '--storage.tsdb.retention.size=10GB'
-      - '--web.enable-lifecycle'
-      - '--web.enable-admin-api'
-    # deploy:
-      # resources:
-        # limits:
-          # memory: 1G
-          # cpus: '0.5'
-        # reservations:
-          # memory: 512M
-          # cpus: '0.25'
-    profiles: []  # 在生产环境中启用
+  # 系统监控服务已移除 (专注SSL证书管理核心功能)
+  # SSL证书管理系统专注于证书业务监控，不再包含基础设施监控
 
-  grafana:
-    restart: always
-    environment:
-      GF_SECURITY_ADMIN_USER: ${GRAFANA_USER}
-      GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_PASSWORD}
-      GF_USERS_ALLOW_SIGN_UP: false
-      GF_SECURITY_ALLOW_EMBEDDING: false
-      GF_SECURITY_COOKIE_SECURE: true
-      GF_SECURITY_COOKIE_SAMESITE: strict
-      GF_SERVER_ROOT_URL: https://${DOMAIN_NAME}/grafana/
-      GF_SERVER_SERVE_FROM_SUB_PATH: true
-    volumes:
-      - grafana_data:/var/lib/grafana
-      - ./monitoring/grafana/dashboards:/etc/grafana/provisioning/dashboards:ro
-      - ./monitoring/grafana/datasources:/etc/grafana/provisioning/datasources:ro
-      - ./monitoring/grafana/plugins:/var/lib/grafana/plugins
-    # deploy:
-      # resources:
-        # limits:
-          # memory: 512M
-          # cpus: '0.5'
-        # reservations:
-          # memory: 256M
-          # cpus: '0.25'
-    profiles: []  # 在生产环境中启用
-
-  # 添加额外的监控组件
-  node-exporter:
-    # 使用官方镜像，稳定可靠
-    image: prom/node-exporter:latest
-    container_name: ssl-manager-node-exporter
-    restart: unless-stopped
-    command:
-      - '--path.procfs=/host/proc'
-      - '--path.rootfs=/rootfs'
-      - '--path.sysfs=/host/sys'
-      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
-    volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /:/rootfs:ro
-    ports:
-      - "9100:9100"
-    # deploy:
-      # resources:
-        # limits:
-          # memory: 128M
-          # cpus: '0.25'
+  # Grafana和Node Exporter已移除 (专注SSL证书管理核心功能)
+  # SSL证书管理系统内置证书监控功能，无需外部监控工具
 
   # cAdvisor容器监控服务已移除
   # 原因: cgroup v2兼容性问题和资源占用考虑
-  # 替代方案: 使用node-exporter和docker stats进行基础监控
+  # 替代方案: 使用SSL证书管理系统内置的证书监控功能
 
   # 备份服务
   backup:
@@ -295,15 +227,6 @@ volumes:
       type: none
       o: bind
       device: /var/log/nginx
-  prometheus_data:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: /opt/ssl-manager/data/prometheus
-  grafana_data:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: /opt/ssl-manager/data/grafana
+  # 监控数据卷已移除 (专注SSL证书管理核心功能)
+  # prometheus_data: 已移除
+  # grafana_data: 已移除
