修复 Docker 构建依赖问题
- 移除后端无效的 ip-range-check 依赖包（PyPI 中不存在）
- 移除前端未使用的 ip-range-check 依赖包
- 修复后端 Dockerfile 启动脚本格式问题
- 所有 IP 范围检查功能使用 Python 内置 ipaddress 模块
- 验证前后端 Docker 镜像构建成功

修复文件：
- backend/requirements.txt: 移除 ip-range-check==0.2.0，添加说明注释
- frontend/package.json: 移除 ip-range-check 依赖
- backend/Dockerfile: 优化启动脚本格式，分离连接的命令行

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -82,8 +82,8 @@ numpy==1.24.3
 # DNS Resolution (already included above but ensuring it's available)
 # dnspython==2.4.2 (already included)
 
-# IP Range Checking
-ip-range-check==0.2.0
+# IP Range Checking (using built-in ipaddress module)
+# ipaddress is part of Python standard library since 3.3
 
 # Additional SSL/TLS Support
 certifi==2023.7.22
