--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,7 @@
     "echarts": "^5.4.2",
     "dayjs": "^1.11.9",
     "@element-plus/icons-vue": "^2.1.0",
-    "papaparse": "^5.4.1",
-    "ip-range-check": "^0.2.0"
+    "papaparse": "^5.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
