--- a/backend/Dockerfile.base
+++ b/backend/Dockerfile.base
@@ -1,6 +1,7 @@
 # 后端基础镜像 - 仅包含依赖
 # 基于Python 3.10 Slim，预安装所有Python依赖
 # 使用阿里云镜像加速器优化拉取速度
+# 针对中国国内网络环境优化
 
 FROM python:3.10-slim
 
@@ -50,11 +51,13 @@ RUN echo "=== 更新系统包 ===" && \
         && \
     echo "=== 系统包安装完成 ==="
 
-# 配置阿里云pip镜像源
+# 配置阿里云pip镜像源（中国国内网络优化）
 RUN echo "=== 配置pip镜像源 ===" && \
     pip config set global.index-url https://mirrors.aliyun.com/pypi/simple/ && \
     pip config set global.trusted-host mirrors.aliyun.com && \
-    pip config set global.timeout 60 && \
+    pip config set global.timeout 120 && \
+    pip config set global.retries 5 && \
+    pip config set global.break-system-packages true && \
     pip config list && \
     echo "=== pip镜像源配置完成 ==="
 
@@ -67,9 +70,9 @@ RUN echo "=== 升级pip ===" && \
 # 复制依赖配置文件
 COPY requirements.txt ./
 
-# 安装Python依赖
+# 安装Python依赖（中国国内网络优化）
 RUN echo "=== 开始安装Python依赖 ===" && \
-    pip install --no-cache-dir -r requirements.txt && \
+    pip install --no-cache-dir --timeout 300 --retries 5 -r requirements.txt && \
     echo "=== Python依赖安装完成 ===" && \
     pip list
 
