修复 Nginx 代理服务 Docker 构建和配置问题
主要修复内容：
1. 修复 docker-compose.yml 中 nginx 服务配置
   - 使用自定义构建的 ssl-manager-nginx-proxy:latest 镜像
   - 移除错误的配置文件挂载，使用镜像内置配置
   - 修复健康检查命令路径

2. 创建独立测试版本解决上游服务依赖问题
   - 新增 nginx/Dockerfile.standalone 独立测试镜像
   - 新增 nginx/conf.d/ssl-manager-standalone.conf 独立配置
   - 不依赖其他服务，可独立运行和测试

3. 添加开发环境支持文件
   - 新增 docker-compose.nginx-dev.yml 开发环境配置
   - 创建测试用模拟服务文件

4. 创建测试资源
   - test/frontend-mock/index.html: 前端模拟服务页面
   - test/backend-mock/health: 后端健康检查模拟
   - test/backend-mock/certificates: 证书API模拟

验证结果：
- ✅ ssl-manager-nginx-proxy:latest 镜像构建成功 (61.8MB)
- ✅ ssl-manager-nginx-standalone:latest 独立测试版本运行正常
- ✅ HTTP 代理功能正常 (端口 8080)
- ✅ 健康检查端点工作正常 (/health, /api/health)
- ✅ 解决了原始的 Docker 卷挂载错误

修复的核心问题：
- Docker 卷挂载路径错误 -> 使用容器内置目录
- nginx 配置依赖不存在的上游服务 -> 创建独立测试版本
- 使用错误的基础镜像 -> 使用自定义构建的代理镜像

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -161,13 +161,10 @@ services:
 
   # Nginx反向代理（生产环境）
   nginx:
-    image: nginx:1.24-alpine
+    image: ssl-manager-nginx-proxy:latest
     container_name: ssl-manager-nginx
     restart: unless-stopped
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/conf.d:/etc/nginx/conf.d:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro
       - nginx_logs:/var/log/nginx
       - ssl_certs:/var/www/ssl-certs:ro
     ports:
@@ -177,7 +174,7 @@ services:
       - frontend
       - backend
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost/health"]
+      test: ["CMD", "/usr/local/bin/health-check.sh"]
       interval: 30s
       timeout: 3s
       retries: 3
