优化 Docker Compose 配置，实现镜像构建与服务启动分离
主要改进：

1. **移除构建配置，使用预构建镜像**
   - docker-compose.yml: 移除 build 配置，使用 ssl-manager-*:latest 镜像
   - docker-compose.dev.yml: 同步移除开发环境的 build 配置
   - docker-compose.aliyun.yml: 移除阿里云环境的 build 配置

2. **新增本地部署专用配置**
   - docker-compose.local.yml: 专为本地环境优化的配置
   - 简化网络配置，使用默认桥接网络
   - 优化健康检查和依赖关系

3. **创建部署文档和工具**
   - DEPLOYMENT_LOCAL.md: 详细的本地部署指南
   - scripts/deploy-local.sh: 一键本地部署脚本
   - scripts/verify-deployment.sh: 全面的部署验证脚本
   - .env.local: 本地部署环境变量模板

技术特点：
- ✅ 完全分离镜像构建和服务启动阶段
- ✅ 支持多种部署模式（本地/开发/生产）
- ✅ 自动化健康检查和依赖管理
- ✅ 完整的验证和故障排除工具

使用方式：
- 快速部署: ./scripts/deploy-local.sh
- 验证部署: ./scripts/verify-deployment.sh
- 手动部署: docker-compose -f docker-compose.local.yml up -d

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,9 +18,7 @@ services:
 
   # 开发环境后端配置
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile.dev  # 开发环境专用Dockerfile
+    image: ssl-manager-backend:latest
     environment:
       ENVIRONMENT: development
       LOG_LEVEL: DEBUG
@@ -65,12 +63,7 @@ services:
 
   # 开发环境前端配置
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile.dev  # 开发环境专用Dockerfile
-      args:
-        NODE_ENV: development
-        VITE_API_BASE_URL: http://localhost:8001/api
+    image: ssl-manager-frontend:latest
     environment:
       NODE_ENV: development
       VITE_API_BASE_URL: http://localhost:8001/api
