--- a/docker-compose.aliyun.yml
+++ b/docker-compose.aliyun.yml
@@ -94,17 +94,9 @@ services:
         max-size: "10m"
         max-file: "3"
 
-  # 后端API服务 - 使用阿里云优化镜像
+  # 后端API服务 - 使用预构建镜像
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-      args:
-        - BUILDKIT_INLINE_CACHE=1
-      cache_from:
-        - python:3.10-slim
-        - ssl-manager-backend-base:latest
-    image: ssl-manager-backend:aliyun
+    image: ssl-manager-backend:latest
     container_name: ssl-manager-backend
     restart: unless-stopped
     environment:
@@ -168,20 +160,9 @@ services:
         max-size: "10m"
         max-file: "3"
 
-  # 前端Web服务 - 使用阿里云优化镜像
+  # 前端Web服务 - 使用预构建镜像
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-      args:
-        - NODE_ENV=production
-        - VITE_API_BASE_URL=${VITE_API_BASE_URL:-/api}
-        - BUILDKIT_INLINE_CACHE=1
-      cache_from:
-        - node:18-alpine
-        - nginx:1.24-alpine
-        - ssl-manager-frontend-base:latest
-    image: ssl-manager-frontend:aliyun
+    image: ssl-manager-frontend:latest
     container_name: ssl-manager-frontend
     restart: unless-stopped
     volumes:
@@ -214,14 +195,6 @@ services:
 
   # Nginx反向代理服务
   nginx-proxy:
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile.proxy.alpine
-      args:
-        - BUILDKIT_INLINE_CACHE=1
-      cache_from:
-        - nginx:alpine
-        - nginx:1.24-alpine
     image: ssl-manager-nginx-proxy:latest
     container_name: ssl-manager-nginx-proxy
     restart: unless-stopped
