--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,79 +1,60 @@
-# 生产环境Nginx主配置文件
-# user指令在非root用户运行时会被忽略
+# SSL证书管理系统 - Nginx主配置文件
+# 生产环境优化配置
+
+user nginx;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
-pid /tmp/nginx.pid;
+pid /var/run/nginx.pid;
 
-# 优化worker配置
+# 工作进程限制
 worker_rlimit_nofile 65535;
 
 events {
-    worker_connections 4096;
+    worker_connections 1024;
     use epoll;
     multi_accept on;
-    accept_mutex off;
 }
 
 http {
-    # 基础配置
+    # 基本设置
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
-
+    
     # 字符集
     charset utf-8;
-
+    
     # 日志格式
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for" '
-                    'rt=$request_time uct="$upstream_connect_time" '
-                    'uht="$upstream_header_time" urt="$upstream_response_time"';
-
-    log_format json escape=json '{'
-                    '"time_local":"$time_local",'
-                    '"remote_addr":"$remote_addr",'
-                    '"remote_user":"$remote_user",'
-                    '"request":"$request",'
-                    '"status":"$status",'
-                    '"body_bytes_sent":"$body_bytes_sent",'
-                    '"http_referer":"$http_referer",'
-                    '"http_user_agent":"$http_user_agent",'
-                    '"http_x_forwarded_for":"$http_x_forwarded_for",'
-                    '"request_time":"$request_time",'
-                    '"upstream_connect_time":"$upstream_connect_time",'
-                    '"upstream_header_time":"$upstream_header_time",'
-                    '"upstream_response_time":"$upstream_response_time"'
-                    '}';
-
+                    '$request_time $upstream_response_time';
+    
+    log_format detailed '$remote_addr - $remote_user [$time_local] "$request" '
+                       '$status $body_bytes_sent "$http_referer" '
+                       '"$http_user_agent" "$http_x_forwarded_for" '
+                       '$request_time $upstream_response_time '
+                       '$upstream_addr $upstream_status';
+    
     # 访问日志
     access_log /var/log/nginx/access.log main;
-
+    
     # 性能优化
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
     keepalive_timeout 65;
-    keepalive_requests 1000;
     types_hash_max_size 2048;
     server_tokens off;
-    reset_timedout_connection on;
-
+    
     # 客户端配置
-    client_max_body_size 50M;
+    client_max_body_size 10M;
     client_body_buffer_size 128k;
     client_header_buffer_size 1k;
     large_client_header_buffers 4 4k;
-    client_body_timeout 30;
-    client_header_timeout 30;
-    send_timeout 30;
-
-    # 代理缓冲配置
-    proxy_buffering on;
-    proxy_buffer_size 4k;
-    proxy_buffers 8 4k;
-    proxy_busy_buffers_size 8k;
-    proxy_temp_file_write_size 8k;
-
+    client_body_timeout 60s;
+    client_header_timeout 60s;
+    send_timeout 60s;
+    
     # Gzip压缩
     gzip on;
     gzip_vary on;
@@ -85,92 +66,134 @@ http {
         text/css
         text/xml
         text/javascript
-        text/x-component
         application/json
         application/javascript
         application/xml+rss
         application/atom+xml
-        application/rss+xml
-        application/xhtml+xml
-        application/x-font-ttf
-        application/x-web-app-manifest+json
-        font/opentype
         image/svg+xml
-        image/x-icon;
-
+        application/x-font-ttf
+        application/vnd.ms-fontobject
+        font/opentype;
+    
+    # 缓存配置
+    open_file_cache max=1000 inactive=20s;
+    open_file_cache_valid 30s;
+    open_file_cache_min_uses 2;
+    open_file_cache_errors on;
+    
+    # 代理缓存配置
+    proxy_cache_path /var/cache/nginx/ssl_manager 
+                     levels=1:2 
+                     keys_zone=ssl_manager_cache:10m 
+                     max_size=1g 
+                     inactive=60m 
+                     use_temp_path=off;
+    
+    proxy_cache_path /var/cache/nginx/static 
+                     levels=1:2 
+                     keys_zone=static_cache:10m 
+                     max_size=500m 
+                     inactive=24h 
+                     use_temp_path=off;
+    
+    # 速率限制
+    limit_req_zone $binary_remote_addr zone=global:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=login_limit:10m rate=1r/s;
+    
+    # 连接限制
+    limit_conn_zone $binary_remote_addr zone=perip:10m;
+    limit_conn_zone $server_name zone=perserver:10m;
+    
     # SSL配置
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
     ssl_prefer_server_ciphers off;
     ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
+    ssl_session_timeout 1d;
     ssl_session_tickets off;
+    
+    # OCSP配置
     ssl_stapling on;
     ssl_stapling_verify on;
-
-    # 安全头部
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-
-    # 限制请求
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-    limit_req_zone $binary_remote_addr zone=login:10m rate=5r/m;
-    limit_req_zone $binary_remote_addr zone=global:10m rate=100r/s;
-
-    # 连接限制
-    limit_conn_zone $binary_remote_addr zone=perip:10m;
-    limit_conn_zone $server_name zone=perserver:10m;
-
+    resolver 8.8.8.8 8.8.4.4 valid=300s;
+    resolver_timeout 5s;
+    
+    # 代理配置
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_set_header X-Forwarded-Port $server_port;
+    proxy_cache_bypass $http_upgrade;
+    
+    # 代理超时
+    proxy_connect_timeout 30s;
+    proxy_send_timeout 60s;
+    proxy_read_timeout 60s;
+    proxy_buffering on;
+    proxy_buffer_size 4k;
+    proxy_buffers 8 4k;
+    proxy_busy_buffers_size 8k;
+    
     # 上游服务器配置
-    upstream frontend_servers {
+    upstream ssl_manager_backend {
         least_conn;
-        server ssl-manager-frontend:80 max_fails=3 fail_timeout=30s;
+        server backend1:5000 max_fails=3 fail_timeout=30s weight=1;
+        server backend2:5000 max_fails=3 fail_timeout=30s weight=1;
+        server backend3:5000 max_fails=3 fail_timeout=30s weight=1;
         keepalive 32;
     }
-
-    upstream api_servers {
-        least_conn;
-        server ssl-manager-backend:8000 max_fails=3 fail_timeout=30s;
-        keepalive 32;
-    }
-
-    upstream monitoring_servers {
-        least_conn;
-        server ssl-manager-grafana:3000 max_fails=3 fail_timeout=30s;
+    
+    upstream ssl_manager_frontend {
+        server frontend1:3000 max_fails=3 fail_timeout=30s weight=1;
+        server frontend2:3000 max_fails=3 fail_timeout=30s weight=1;
         keepalive 16;
     }
-
-    upstream prometheus_servers {
-        least_conn;
-        server ssl-manager-prometheus:9090 max_fails=3 fail_timeout=30s;
-        keepalive 16;
+    
+    # 默认服务器（拒绝未知域名）
+    server {
+        listen 80 default_server;
+        listen [::]:80 default_server;
+        listen 443 ssl default_server;
+        listen [::]:443 ssl default_server;
+        
+        # 默认SSL证书（自签名）
+        ssl_certificate /etc/nginx/ssl/default.crt;
+        ssl_certificate_key /etc/nginx/ssl/default.key;
+        
+        server_name _;
+        
+        # 返回444（连接关闭）
+        return 444;
     }
-
-    # 缓存配置
-    proxy_cache_path /var/cache/nginx/proxy levels=1:2 keys_zone=api_cache:10m max_size=1g inactive=60m use_temp_path=off;
-    proxy_cache_path /var/cache/nginx/static levels=1:2 keys_zone=static_cache:10m max_size=1g inactive=1d use_temp_path=off;
-
-    # 文件缓存
-    open_file_cache max=1000 inactive=20s;
-    open_file_cache_valid 30s;
-    open_file_cache_min_uses 2;
-    open_file_cache_errors on;
-
+    
+    # 健康检查服务器
+    server {
+        listen 8080;
+        server_name localhost;
+        
+        access_log off;
+        
+        location /health {
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
+        }
+        
+        location /nginx_status {
+            stub_status on;
+            allow 127.0.0.1;
+            allow 10.0.0.0/8;
+            allow 172.16.0.0/12;
+            allow 192.168.0.0/16;
+            deny all;
+        }
+    }
+    
     # 包含虚拟主机配置
     include /etc/nginx/conf.d/*.conf;
-
-    # 默认服务器（捕获未匹配的请求）
-    # server {
-    #     listen 80;
-    #     listen 443 ssl;
-    #     server_name _;
-
-    #     ssl_certificate /etc/nginx/ssl/default.crt;
-    #     ssl_certificate_key /etc/nginx/ssl/default.key;
-
-    #     return 444;  # 关闭连接
-    # }
 }
